syntax = "proto3";

package jobworkerp.runner;

// command runner settings
message CommandRunnerSettings {
  // command name (e.g. "echo")
  string name = 1;
}

